<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NikeStore</string>
    <string name="home">خانه</string>
    <string name="cart">سبد خرید</string>
    <string name="profile">اطلاعات کاربری</string>
    <string name="latest">جدیدترین</string>
    <string name="popular">پربازدیدترین</string>
    <string name="expensive">گران ترین</string>
    <string name="cheapest">ارزان ترین</string>
    <string name="viewAll">مشاهده همه</string>
    <string name="comments">نظرات کاربران</string>
    <string name="insertComment">ثبت نظر</string>
    <string name="viewAllComments">مشاهده همه نظرات</string>
    <string name="productList">لیست محصولات</string>
    <string name="sort">مرتب سازی</string>
    <string name="sortLatest">جدیدترین</string>
    <string name="sortPopular">پربازدیدترین</string>
    <string name="sortPriceHighToLow">گران ترین</string>
    <string name="sortPriceLowToHigh">ارزان ترین</string>
    <string name="addToCart">افزودن به سبد خرید</string>
    <string name="internet_error">متأسفانه اتصال برقرار نشد لطفاً مجدداً اتصال خود به اینترنت را بررسی نمایید.</string>
    <string name="success_addToCart">به سبد خرید اضافه شد</string>
    <string name="save_user_name_password">مرا به خاطر بسپار</string>
    <string name="user_name">نام کاربری</string>
    <string name="your_device_does_not_support_biometric_password">دستگاه شما قابلیت پشتیبانی از رمز بیومتریک را ندارد</string>
    <string name="no_password_saved_for_you">رمزی برای شما ذخیره نشده است</string>
    <string name="please_enter_information_completely">لطفا اطلاعات را به طور کامل وارد نمایید</string>
    <string-array name="sortTitlesArray">
        <item>@string/sortLatest</item>
        <item>@string/sortPopular</item>
        <item>@string/sortPriceHighToLow</item>
        <item>@string/sortPriceLowToHigh</item>
    </string-array>

    <string name="loginScreenTitle">ورود به حساب کاربری</string>
    <string name="loginTitle">ورود</string>
    <string name="password">رمز عبور</string>
    <string name="signUpHint">حساب کاربری ندارید؟</string>
    <string name="signUp">ثبت نام</string>
    <string name="authHint">نام کاربری و رمز عبور خود را وارد کنید</string>
    <string name="delete_biometric_password">حذف رمز عبور بیومتریک</string>
    <string name="are_you_sure_you_want_to_delete_biometric_password">آیا مایل به حذف رمز عبور بیومتریک هستید؟</string>
    <string name="delete_biometric_password_successfully">رمز بیومتریک با موفقیت حذف شد</string>
    <string name="no_log_file">فایل گزارش وجود ندارد</string>
    <string name="error_logs">فایل گزارش</string>
    <string name="error_logs_successfully">فایل با موفقیت حذف شد</string>
    <string name="version">نسخه : %1$s</string>
    <string name="about_us_text">نـــــــــــایـــــــــــــــــــــــــــــک (Nike) یک شرکت آمریکایی چندملیتی است که در زمینه طراحی، تولید، توسعه و پخش محصولاتی مانند کفش ورزشی، پوشاک ورزشی و تجهیزات ورزشی فعالیت می‌کند. دفتر مرکزی این کورپوریشن، در نزدیکی شهر بیورتون ایالت اورگن در شمال‌باختری ایالات متحده آمریکا واقع است. نـــــــــــایـــــــــــــــــــــــــــــک بزرگترین تولیدکننده در زمینه تولید کفش‌های ورزشی، پوشاک، لوازم و تجهیزات ورزشی در جهان به‌شمار می‌رود. ارزش این شرکت در سال ۲۰۱۰ به‌تنهایی بالغ بر ۱۰٫۷ میلیارد دلار برآورد شده که این شرکت را در این سال برترین تولیدکننده محصولات ورزشی نموده‌است.
    نـــــــــــایـــــــــــــــــــــــــــــک دارای زیرمجموعه‌هایی از جمله آمبرو و کانورس (تولیدکننده کفش‌های آل استار) و همچنین کول هان و هارلی اینترنشنال است.</string>
    <string name="call_center">مرکز تماس</string>
    <string name="email">پست الکترونیک</string>
    <string name="webSite">وب سایت</string>
    <string name="nike_webSite_address">www.nike.com</string>
    <string name="nike_tel">۱-۸۰۰-۸۰۶-۶۴۵۳+</string>
    <string name="send_report_file">ارسال فایل گزارش</string>
    <string name="read_report_file">نمایش فایل گزارش</string>
    <string name="delete_report_file">حذف فایل گزارش</string>
    <string name="social_networks">شبکه های اجتماعی</string>
    <string name="about_us">درباره ما</string>
    <string name="signUpScreenTitle">ایجاد حساب کاربری</string>
    <string name="loginHint">قبلا ثبت نام کردید؟</string>
    <string name="pay">پرداخت</string>
    <string name="count">تعداد</string>
    <string name="removeFromCart">حذف از سبد خرید</string>
    <string name="purchaseDetail">جزییات خرید</string>
    <string name="totalPrice">مبلغ کل خرید</string>
    <string name="shippingCost">هزینه ارسال</string>
    <string name="payablePrice">مبلغ قابل پرداخت</string>
    <string name="cartEmptyStateLoginRequired">وارد حساب کاربری خود شوید</string>
    <string name="cartEmptyStateCallToAction">ورود به حساب کاربری</string>
    <string name="cartEmptyState">هیچ خبری اینجا نیست!</string>
    <string name="shippingToolbarTitle">انتخاب تحویل گیرنده و شیوه پرداخت</string>
    <string name="onlinePayment">پرداخت اینترنتی</string>
    <string name="cashOnDelivery">پرداخت در محل</string>
    <string name="firstName">نام</string>
    <string name="lastName">نام خانوادگی</string>
    <string name="postalCode">کد پستی</string>
    <string name="phoneNumber">شماره موبایل</string>
    <string name="address">آدرس</string>
    <string name="checkoutToolbarTitle">رسید پرداخت</string>
    <string name="returnHome">بازگشت به صفحه اصلی</string>
    <string name="orderHistory">سوابق سفارش</string>
    <string name="purchaseStatus">وضعیت سفارش</string>
    <string name="price">مبلغ</string>
    <string name="favorites">لیست علاقه مندی ها</string>
    <string name="signIn">ورود به حساب کاربری</string>
    <string name="signOut">خروج از حساب کاربری</string>
    <string name="exit">خروج</string>
    <string name="guest_user">کاربر مهمان</string>
    <string name="favorites_empty_state_message">هنوز محصولی به لیست علاقه مندی اضافه نکردی</string>
    <string name="favorites_help_message">برای حذف محصول انگشت خود را روی آن نگه دارید</string>
    <string name="orderHistory_orderId">شناسه سفارش</string>
    <string name="orderHistory_payable">مبلغ</string>
    <string name="search">جستجو در فروشگاه نـــــــــــایـــــــــــــــــــــــــــــک</string>
    <string name="send_comment">نظر شما با موفقیت ثبت گردید</string>
    <string name="close_dialog">بستن</string>
    <string name="please_select_first_name">لطفا نام را وارد کنید</string>
    <string name="please_enter_last_name">لطفا نام خانوادگی را وارد کنید</string>
    <string name="please_enter_postal_code">لطفاً سریال کد پستی معتبر وارد کنید</string>
    <string name="please_enter_valid_phone_number">لطفاً شماره موبایل معتبر وارد کنید</string>
    <string name="please_enter_address">لطفا آدرس را مشخص کنید</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
</resources>