<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:strokeColor="?dividerColor"
                android:scaleType="centerInside"
                app:strokeWidth="1dp"
                app:shapeAppearance="@style/Avatar"
                android:layout_marginTop="32dp"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/usernameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="?textAppearanceBody1"
                tools:text="@string/guest_user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:divider="@drawable/shape_divider"
                android:showDividers="middle|beginning|end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/favoriteProductsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ProfileLinks"
                    android:text="@string/favorites"
                    app:drawableStartCompat="@drawable/ic_favorites_20dp" />

                <TextView
                    android:id="@+id/orderHistoryBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ProfileLinks"
                    android:text="@string/orderHistory"
                    app:drawableStartCompat="@drawable/ic_order_history" />

                <TextView
                    android:id="@+id/authBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ProfileLinks"
                    android:text="@string/signIn"
                    app:drawableStartCompat="@drawable/ic_sign_in" />

                <TextView
                    android:id="@+id/deleteBiometricUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ProfileLinks"
                    android:text="@string/delete_biometric_password"
                    app:drawableStartCompat="@drawable/round_delete_24" />

                <TextView
                    android:id="@+id/aboutUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ProfileLinks"
                    android:text="@string/about_us"
                    app:drawableStartCompat="@drawable/ic_round_person_24" />

                <TextView
                    android:id="@+id/exitBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ProfileLinks"
                    android:text="@string/exit"
                    app:drawableStartCompat="@drawable/ic_baseline_exit_to_app_24" />
            </LinearLayout>
        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>